Add better preview

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "graphics": {
       "icon": "images/mona.jpg",
       "previews": [
-        "images/mona.jpg"
+        "images/comic-preview.jpg"
       ]
     }
   },
